--- a/templates/shop/contact.html
+++ b/templates/shop/contact.html
@@ -7,15 +7,16 @@
         <meta charset="UTF-8" >
         <meta name="viewport" content="width=device-width, initial-scale=1.0" >
         <title >Contact Us</title >
+
+            <link href="{% static 'assets/cdn/css/contact_slick.min.css' %}" rel="stylesheet" />
+            <link href="{% static 'assets/cdn/css/contact_slick-theme.min.css' %}" rel="stylesheet" />
         <!-- ==================================== custom cdn for slider===================================== -->
     </head >
     <body >
-    <script src="{% static 'assets/cdn/custom_jquery.min.js' %}" ></script >
-    <script src="{% static 'assets/cdn/slick.min.js' %}" ></script >
+    <script src="{% static 'assets/cdn/contact_jquery.min.js' %}" ></script >
+    <script src="{% static 'assets/cdn/contact_slick.min.js' %}" ></script >
     <div id="main" style="margin-top: 70px">
         <div >
-            <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" rel="stylesheet" />
-            <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" rel="stylesheet" />
             <section class=" slider contact_banner_section" >
                 <div class="container" >
                     <div class="row justify-content-center" >
