--- a/templates/shop/delivery_status.html
+++ b/templates/shop/delivery_status.html
@@ -9,7 +9,7 @@
     </head >
     <body >
     <div id="main" >
-        <header class="coffee-2" style="margin-top: 65px !important;" >
+        <header class="coffee-2" style="margin-top: 75px !important;" >
             <div class="navigation-filter" >
                 <div class="container" >
                     <div class="row" >
@@ -185,7 +185,7 @@
                         <div class="row justify-content-center" >
                             <div class="col-lg-12 col-sm-3 col-12 " >
                                 <div class="pr_img" >
-                                    <img src="{% static 'assets/images/product/product02.png' %}" alt="" class="animated" >
+                                    <img src="{% static 'assets/images/product/product02.png' %}" alt="" class="animated_delivery" >
                                     <div class="overlay_image" >
                                         <div class="information" >
                                             <h2 >Item Information</h2 >
@@ -218,7 +218,7 @@
                     <div class="col-lg-6 px-3" >
                         <div class="ordered_styling pb-3 " >
                             <div class="order_image" >
-                                <img src="{% static 'assets/images/product/product02.png' %}" alt="previous Item" class="animated" >
+                                <img src="{% static 'assets/images/product/product02.png' %}" alt="previous Item" class="animated_delivery" >
                             </div >
                             <div >
                                 <ul class="ordered" >
