--- a/templates/master.html
+++ b/templates/master.html
@@ -615,6 +615,17 @@
             });
         });
     </script >
+    <!-- Small modal -->
+{#<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-sm">Small modal</button>#}
+
+<div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <iframe src="http://127.0.0.1:8000/user_login"></iframe>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
 {#                           <!-- Trigger the modal with a button -->#}
 {#<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#quickViewModal">Open Modal</button>#}
